Alterações de imagens

--- a/pagina.html
+++ b/pagina.html
@@ -11,18 +11,23 @@
     </head>
     <body>
         
-        <table >
-            <tr id="tabela1">
-                <td>
-            <img src="C:\Users\guilh\Desktop\uni_1semestre\Tec Web\trabalho\imagens/168203.png" alt="" width="50px" height="40px"></td>
-            <td><div id = "logo"><img src="C:\Users\guilh\Desktop\uni_1semestre\Tec Web\trabalho\imagens/SIXT_Logo-frame.565790a1.png" alt="" width="70px" height="60px"></td>
+        <table>
+  <tr id="tabela1">
+    <td>
+      <img src="imagens/168203.png" alt="" width="50px" height="40px" />
+    </td>
+    <td>
+      <div id="logo">
+        <img src="imagens/SIXT_Logo-frame.565790a1.png" alt="" width="70px" height="60px" />
+      </div>
+    </td>
+    <td id="divt1">
+      <img src="imagens/3664538.png" alt="Gerir Reservas" width="50px" height="40px" />
+      <p>Gerir Reservas</p>
+    </td>
+  </tr>
+</table>
 
-
-        <td id="divt1"> <img src="C:\Users\guilh\Desktop\uni_1semestre\Tec Web\trabalho\imagens/3664538.png" alt="Gerir Reservas" width="50px" height="40px" ></img>
-        <p>Gerir Reservas</p></td>
-
-            </tr>
-        </table>
 
     </body>
     </html>
