--- a/pagina.html
+++ b/pagina.html
@@ -19,9 +19,9 @@
 
     <!-- Tabela/menu -->
     <table id="menu-principal" role="navigation">
-        <tr id="tabela1">
+        <tr>
             
-            <td>
+            <td id="imagem1">
                 <img src="imagens/168203.png" alt="Menu" width="50" height="40">
             </td>
             <td id="logo">
