--- a/pagina.html
+++ b/pagina.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="pagina.css">
 </head>
 <body>
-    <!-- Fundo com imagem (DIV separada, ocupa todo o ecrã) -->
-    <div class="imagem-fundo" aria-hidden="true"></div>
+    <div class="imagem-fundo" aria-hidden="true">
+        <img src="imagens/imagem inicial.webp" alt="">
+    </div>
 
     <!-- Header / título -->
     <header>
